--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "@chakra-ui/react": "^1.7.3",
     "@chakra-ui/icons": "^0.0.0-pr-20211113202333",
+    "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/montserrat": "^4.5.1",
     "@fontsource/open-sans": "^4.5.2",
     "@fontsource/raleway": "^4.5.0",
     "framer-motion": "^4.1.17",
-    "dotenv": "^10.0.0",
-    "google-spreadsheet": "^3.2.0"
+    "google-spreadsheet": "^3.2.0",
+    "next": "latest",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
