--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "google-spreadsheet": "^3.2.0",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   }
 }
