--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
+  },
+  "devDependencies": {
+    "prettier": "2.5.1"
   }
 }
