--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@fontsource/raleway": "^4.5.0",
     "framer-motion": "^4.1.17",
     "google-spreadsheet": "^3.2.0",
-    "next": "latest",
+    "next": "12.0.3",
     "react": "17.0.2",
+    "react-twitch-embed": "^2.1.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
   },
