--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/montserrat": "^4.5.1",
+    "chart.js": "2.9.4",
     "google-spreadsheet": "^3.2.0",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-twitch-embed": "^2.1.0",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-twitch-embed": "^2.1.0"
   },
   "devDependencies": {
     "prettier": "2.5.1"
