--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/montserrat": "^4.5.1",
-    "chart.js": "2.9.4",
+    "chart.js": "^3.7.0",
     "google-spreadsheet": "^3.2.0",
     "next": "12.0.3",
     "react": "17.0.2",
