--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.6.0",
     "@fontsource/montserrat": "^4.5.1",
     "chart.js": "^3.7.0",
+    "chartjs-plugin-annotation": "^1.2.2",
     "chartjs-plugin-datalabels": "^2.0.0",
     "google-spreadsheet": "^3.2.0",
     "next": "12.0.3",
