--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^8.33.1",
     "react-twitch-embed": "^2.1.0"
   },
   "devDependencies": {
