--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@kulkul/tinyurl-client": "^1.0.7",
     "@sentry/nextjs": "^6.16.1",
+    "bitly": "^7.1.2",
     "chart.js": "^3.7.0",
     "chartjs-plugin-annotation": "^1.2.2",
     "chartjs-plugin-datalabels": "^2.0.0",
@@ -23,7 +25,8 @@
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
     "react-query": "^3.34.8",
-    "react-twitch-embed": "^2.1.0"
+    "react-twitch-embed": "^2.1.0",
+    "tinyurl": "^1.1.7"
   },
   "devDependencies": {
     "prettier": "2.5.1"
