--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "chartjs-plugin-datalabels": "^2.0.0",
     "framer-motion": "^5.5.5",
     "google-spreadsheet": "^3.2.0",
+    "konva": "^8.3.2",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
+    "react-konva": "^17.0.2-5",
     "react-query": "^3.34.8",
     "react-twitch-embed": "^2.1.0",
-    "tinyurl": "^1.1.7"
+    "tinyurl": "^1.1.7",
+    "use-image": "^1.0.8"
   },
   "devDependencies": {
     "prettier": "2.5.1"
