--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^5.5.5",
     "google-spreadsheet": "^3.2.0",
     "next": "12.0.3",
+    "planetscale-node": "^0.3.0",
     "react": "17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
@@ -26,7 +27,7 @@
     "react-intersection-observer": "^8.33.1",
     "react-query": "^3.34.8",
     "react-twitch-embed": "^2.1.0",
-    "tinyurl": "^1.1.7"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "prettier": "2.5.1"
