--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^3.7.0",
     "chartjs-plugin-annotation": "^1.2.2",
     "chartjs-plugin-datalabels": "^2.0.0",
+    "deep-equal": "^2.0.5",
     "framer-motion": "^5.5.5",
     "google-spreadsheet": "^3.2.0",
     "next": "12.0.3",
