--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
     "react-query": "^3.34.8",
+    "react-share": "^4.4.0",
     "react-twitch-embed": "^2.1.0",
     "uuid": "^8.3.2"
   },
