--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "framer-motion": "^5.5.5",
     "google-spreadsheet": "^3.2.0",
     "next": "12.0.3",
+    "next-global-css": "1.2.0",
+    "next-images": "^1.8.4",
     "planetscale-node": "^0.3.0",
     "react": "17.0.2",
     "react-countdown": "^2.3.2",
@@ -29,6 +31,7 @@
     "react-query": "^3.34.8",
     "react-share": "^4.4.0",
     "react-twitch-embed": "^2.1.0",
+    "tarkov-gun-builder": "1.0.9",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
