--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
+    "react-player": "^2.10.0",
     "react-query": "^3.34.8",
     "react-share": "^4.4.0",
     "react-twitch-embed": "^2.1.0",
